// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`list-picker — list row rendering > given a list of items > when an item is focused (selected) > renders focused row with selection highlight 1`] = `
[
  "[borderAccent:╭][borderAccent:────────────────────────────][border:┬][border:─────────────────────────────────────────────────][border:╮]",
  "[borderAccent:│][borderAccent:[accent: Test Picker (3/3)[0m          ]][border:│][border:[accent: Source Preview[0m                                  ]][border:│]",
  "[borderAccent:├][borderAccent:────────────────────────────][border:┼][border:─────────────────────────────────────────────────][border:┤]",
  "[borderAccent:│] [icon] file-a.ts[0m           [border:│][0m  line1[0m                                          [border:│]",
  "[borderAccent:│][BG:selectedBg:[accent:** [i[border:│][0m  line2[0m                                          [border:│]",
  "[borderAccent:│] [icon] file-c.ts[0m           [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:├][borderAccent:────────────────────────────][border:┴][border:─────────────────────────────────────────────────][border:┤]",
  "[border:│][dim: ↑ nav  pgup scroll[0m                                                           ][border:│]",
  "[border:╰][border:──────────────────────────────────────────────────────────────────────────────][border:╯]",
]
`;

exports[`list-picker — list row rendering > given a list of items > when focused item is near the bottom > scrolls the list to show the focused item 1`] = `
[
  "[borderAccent:╭][borderAccent:────────────────────────────][border:┬][border:─────────────────────────────────────────────────][border:╮]",
  "[borderAccent:│][borderAccent:[accent: Test Picker (15/15)[0m        ]][border:│][border:[accent: Source Preview[0m                                  ]][border:│]",
  "[borderAccent:├][borderAccent:────────────────────────────][border:┼][border:─────────────────────────────────────────────────][border:┤]",
  "[borderAccent:│] [★] long-file-name-000.ts[0m  [border:│][0m[dim:  No preview available][0m                     [border:│]",
  "[borderAccent:│] [★] long-file-name-001.ts[0m  [border:│][0m                                                 [border:│]",
  "[borderAccent:│] [★] long-file-name-002.ts[0m  [border:│][0m                                                 [border:│]",
  "[borderAccent:│] [★] long-file-name-003.ts[0m  [border:│][0m                                                 [border:│]",
  "[borderAccent:│] [★] long-file-name-004.ts[0m  [border:│][0m                                                 [border:│]",
  "[borderAccent:│] [★] long-file-name-005.ts[0m  [border:│][0m                                                 [border:│]",
  "[borderAccent:│] [★] long-file-name-006.ts[0m  [border:│][0m                                                 [border:│]",
  "[borderAccent:│] [★] long-file-name-007.ts[0m  [border:│][0m                                                 [border:│]",
  "[borderAccent:│] [★] long-file-name-008.ts[0m  [border:│][0m                                                 [border:│]",
  "[borderAccent:│] [★] long-file-name-009.ts[0m  [border:│][0m                                                 [border:│]",
  "[borderAccent:│] [★] long-file-name-010.ts[0m  [border:│][0m                                                 [border:│]",
  "[borderAccent:│] [★] long-file-name-011.ts[0m  [border:│][0m                                                 [border:│]",
  "[borderAccent:│][BG:selectedBg:[accent:** [★[border:│][0m                                                 [border:│]",
  "[borderAccent:│] [★] long-file-name-013.ts[0m  [border:│][0m                                                 [border:│]",
  "[borderAccent:│] [★] long-file-name-014.ts[0m  [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:├][borderAccent:────────────────────────────][border:┴][border:─────────────────────────────────────────────────][border:┤]",
  "[border:│][dim: ↑ nav  pgup scroll[0m                                                           ][border:│]",
  "[border:╰][border:──────────────────────────────────────────────────────────────────────────────][border:╯]",
]
`;

exports[`list-picker — list row rendering > given a list of items > when rendering multiple items with different path lengths > renders all rows with consistent left padding 1`] = `
[
  "[borderAccent:╭][borderAccent:────────────────────────────][border:┬][border:─────────────────────────────────────────────────][border:╮]",
  "[borderAccent:│][borderAccent:[accent: Test Picker (3/3)[0m          ]][border:│][border:[accent: Source Preview[0m                                  ]][border:│]",
  "[borderAccent:├][borderAccent:────────────────────────────][border:┼][border:─────────────────────────────────────────────────][border:┤]",
  "[borderAccent:│][BG:selectedBg:[accent:** [i[border:│][0m  line1[0m                                          [border:│]",
  "[borderAccent:│] [icon] medium-length-file.t[border:│][0m  line2[0m                                          [border:│]",
  "[borderAccent:│] [icon] this-is-a-very-long-[border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:├][borderAccent:────────────────────────────][border:┴][border:─────────────────────────────────────────────────][border:┤]",
  "[border:│][dim: ↑ nav  pgup scroll[0m                                                           ][border:│]",
  "[border:╰][border:──────────────────────────────────────────────────────────────────────────────][border:╯]",
]
`;

exports[`list-picker — list row rendering > given a list of items > when rendering with a single item > renders the item row consistently padded 1`] = `
[
  "[borderAccent:╭][borderAccent:────────────────────────────][border:┬][border:─────────────────────────────────────────────────][border:╮]",
  "[borderAccent:│][borderAccent:[accent: Test Picker (1/1)[0m          ]][border:│][border:[accent: Source Preview[0m                                  ]][border:│]",
  "[borderAccent:├][borderAccent:────────────────────────────][border:┼][border:─────────────────────────────────────────────────][border:┤]",
  "[borderAccent:│][BG:selectedBg:[accent:** [i[border:│][0m  line1[0m                                          [border:│]",
  "[borderAccent:│][0m                            [border:│][0m  line2[0m                                          [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:├][borderAccent:────────────────────────────][border:┴][border:─────────────────────────────────────────────────][border:┤]",
  "[border:│][dim: ↑ nav  pgup scroll[0m                                                           ][border:│]",
  "[border:╰][border:──────────────────────────────────────────────────────────────────────────────][border:╯]",
]
`;

exports[`list-picker — list row rendering > given a list of items > when rendering with custom formatItem > uses the custom formatter consistently across rows 1`] = `
[
  "[borderAccent:╭][borderAccent:────────────────────────────][border:┬][border:─────────────────────────────────────────────────][border:╮]",
  "[borderAccent:│][borderAccent:[accent: Test Picker (3/3)[0m          ]][border:│][border:[accent: Source Preview[0m                                  ]][border:│]",
  "[borderAccent:├][borderAccent:────────────────────────────][border:┼][border:─────────────────────────────────────────────────][border:┤]",
  "[borderAccent:│][BG:selectedBg:[accent:** [★[border:│][0m[dim:  No preview available][0m                     [border:│]",
  "[borderAccent:│] [★] modified-file.ts[0m       [border:│][0m                                                 [border:│]",
  "[borderAccent:│] [★] deleted-file.ts[0m        [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:├][borderAccent:────────────────────────────][border:┴][border:─────────────────────────────────────────────────][border:┤]",
  "[border:│][dim: ↑ nav  pgup scroll[0m                                                           ][border:│]",
  "[border:╰][border:──────────────────────────────────────────────────────────────────────────────][border:╯]",
]
`;

exports[`list-picker — list row rendering > given a list of items > when terminal height is smaller than item count > renders only visible rows with consistent padding 1`] = `
[
  "[borderAccent:╭][borderAccent:────────────────────────────][border:┬][border:─────────────────────────────────────────────────][border:╮]",
  "[borderAccent:│][borderAccent:[accent: Test Picker (15/15)[0m        ]][border:│][border:[accent: Source Preview[0m                                  ]][border:│]",
  "[borderAccent:├][borderAccent:────────────────────────────][border:┼][border:─────────────────────────────────────────────────][border:┤]",
  "[borderAccent:│][BG:selectedBg:[accent:** [i[border:│][0m  line1[0m                                          [border:│]",
  "[borderAccent:│] [icon] file-001.ts[0m         [border:│][0m  line2[0m                                          [border:│]",
  "[borderAccent:│] [icon] file-002.ts[0m         [border:│][0m                                                 [border:│]",
  "[borderAccent:│] [icon] file-003.ts[0m         [border:│][0m                                                 [border:│]",
  "[borderAccent:│] [icon] file-004.ts[0m         [border:│][0m                                                 [border:│]",
  "[borderAccent:│] [icon] file-005.ts[0m         [border:│][0m                                                 [border:│]",
  "[borderAccent:│] [icon] file-006.ts[0m         [border:│][0m                                                 [border:│]",
  "[borderAccent:│] [icon] file-007.ts[0m         [border:│][0m                                                 [border:│]",
  "[borderAccent:│] [icon] file-008.ts[0m         [border:│][0m                                                 [border:│]",
  "[borderAccent:│] [icon] file-009.ts[0m         [border:│][0m                                                 [border:│]",
  "[borderAccent:│] [icon] file-010.ts[0m         [border:│][0m                                                 [border:│]",
  "[borderAccent:│] [icon] file-011.ts[0m         [border:│][0m                                                 [border:│]",
  "[borderAccent:│] [icon] file-012.ts[0m         [border:│][0m                                                 [border:│]",
  "[borderAccent:│] [icon] file-013.ts[0m         [border:│][0m                                                 [border:│]",
  "[borderAccent:│] [icon] file-014.ts[0m         [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:├][borderAccent:────────────────────────────][border:┴][border:─────────────────────────────────────────────────][border:┤]",
  "[border:│][dim: ↑ nav  pgup scroll[0m                                                           ][border:│]",
  "[border:╰][border:──────────────────────────────────────────────────────────────────────────────][border:╯]",
]
`;

exports[`list-picker — list row rendering > given a list of items > when the focused item changes > updates the focused row highlight 1`] = `
[
  "[borderAccent:╭][borderAccent:────────────────────────────][border:┬][border:─────────────────────────────────────────────────][border:╮]",
  "[borderAccent:│][borderAccent:[accent: Test Picker (4/4)[0m          ]][border:│][border:[accent: Source Preview[0m                                  ]][border:│]",
  "[borderAccent:├][borderAccent:────────────────────────────][border:┼][border:─────────────────────────────────────────────────][border:┤]",
  "[borderAccent:│] [icon] alpha.ts[0m            [border:│][0m  line1[0m                                          [border:│]",
  "[borderAccent:│] [icon] beta.ts[0m             [border:│][0m  line2[0m                                          [border:│]",
  "[borderAccent:│] [icon] gamma.ts[0m            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][BG:selectedBg:[accent:** [i[border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:├][borderAccent:────────────────────────────][border:┴][border:─────────────────────────────────────────────────][border:┤]",
  "[border:│][dim: ↑ nav  pgup scroll[0m                                                           ][border:│]",
  "[border:╰][border:──────────────────────────────────────────────────────────────────────────────][border:╯]",
]
`;

exports[`list-picker — list row rendering > given a list of items > with ANSI-colored labels > renders rows with consistent padding when formatItem uses theme colors 1`] = `
[
  "[borderAccent:╭][borderAccent:────────────────────────────][border:┬][border:─────────────────────────────────────────────────][border:╮]",
  "[borderAccent:│][borderAccent:[accent: Test Picker (2/2)[0m          ]][border:│][border:[accent: Source Preview[0m                                  ]][border:│]",
  "[borderAccent:├][borderAccent:────────────────────────────][border:┼][border:─────────────────────────────────────────────────][border:┤]",
  "[borderAccent:│][BG:selectedBg:[accent:** [a[border:│][0m[dim:  No preview available][0m                     [border:│]",
  "[borderAccent:│] [accent:[icon] typescript.t[border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:├][borderAccent:────────────────────────────][border:┴][border:─────────────────────────────────────────────────][border:┤]",
  "[border:│][dim: ↑ nav  pgup scroll[0m                                                           ][border:│]",
  "[border:╰][border:──────────────────────────────────────────────────────────────────────────────][border:╯]",
]
`;

exports[`list-picker — list row rendering > given a list of items > with wide characters in labels > renders rows with consistent padding despite wide chars 1`] = `
[
  "[borderAccent:╭][borderAccent:────────────────────────────][border:┬][border:─────────────────────────────────────────────────][border:╮]",
  "[borderAccent:│][borderAccent:[accent: Test Picker (3/3)[0m          ]][border:│][border:[accent: Source Preview[0m                                  ]][border:│]",
  "[borderAccent:├][borderAccent:────────────────────────────][border:┼][border:─────────────────────────────────────────────────][border:┤]",
  "[borderAccent:│][BG:selectedBg:[accent:** [i[border:│][0m  line1[0m                                          [border:│]",
  "[borderAccent:│] [icon] αρχείο.ts[0m           [border:│][0m  line2[0m                                          [border:│]",
  "[borderAccent:│] [icon] ファイル.ts[0m         [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:├][borderAccent:────────────────────────────][border:┴][border:─────────────────────────────────────────────────][border:┤]",
  "[border:│][dim: ↑ nav  pgup scroll[0m                                                           ][border:│]",
  "[border:╰][border:──────────────────────────────────────────────────────────────────────────────][border:╯]",
]
`;

exports[`list-picker — list row rendering > given empty items > renders the empty message row 1`] = `
[
  "[borderAccent:╭][borderAccent:────────────────────────────][border:┬][border:─────────────────────────────────────────────────][border:╮]",
  "[borderAccent:│][borderAccent:[accent: Test Picker (0/0)[0m          ]][border:│][border:[accent: Source Preview[0m                                  ]][border:│]",
  "[borderAccent:├][borderAccent:────────────────────────────][border:┼][border:─────────────────────────────────────────────────][border:┤]",
  "[borderAccent:│][dim: No items found[0m        [border:│][0m[dim:  No preview available][0m                     [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:├][borderAccent:────────────────────────────][border:┴][border:─────────────────────────────────────────────────][border:┤]",
  "[border:│][dim: ↑ nav  pgup scroll[0m                                                           ][border:│]",
  "[border:╰][border:──────────────────────────────────────────────────────────────────────────────][border:╯]",
]
`;

exports[`list-picker — list row rendering > given error state > renders the error row 1`] = `
[
  "[borderAccent:╭][borderAccent:────────────────────────────][border:┬][border:─────────────────────────────────────────────────][border:╮]",
  "[borderAccent:│][borderAccent:[accent: Test Picker (0/0)[0m          ]][border:│][border:[accent: Source Preview[0m                                  ]][border:│]",
  "[borderAccent:├][borderAccent:────────────────────────────][border:┼][border:─────────────────────────────────────────────────][border:┤]",
  "[borderAccent:│][error: Error: Failed to loa[border:│][0m[dim:  No preview available][0m                     [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:├][borderAccent:────────────────────────────][border:┴][border:─────────────────────────────────────────────────][border:┤]",
  "[border:│][dim: ↑ nav  pgup scroll[0m                                                           ][border:│]",
  "[border:╰][border:──────────────────────────────────────────────────────────────────────────────][border:╯]",
]
`;

exports[`list-picker — list row rendering > given loading state > renders the loading row 1`] = `
[
  "[borderAccent:╭][borderAccent:────────────────────────────][border:┬][border:─────────────────────────────────────────────────][border:╮]",
  "[borderAccent:│][borderAccent:[accent: Test Picker (0/0)[0m          ]][border:│][border:[accent: Source Preview[0m                                  ]][border:│]",
  "[borderAccent:├][borderAccent:────────────────────────────][border:┼][border:─────────────────────────────────────────────────][border:┤]",
  "[borderAccent:│][dim: Loading...[0m            [border:│][0m[dim:  No preview available][0m                     [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:│][0m                            [border:│][0m                                                 [border:│]",
  "[borderAccent:├][borderAccent:────────────────────────────][border:┴][border:─────────────────────────────────────────────────][border:┤]",
  "[border:│][dim: ↑ nav  pgup scroll[0m                                                           ][border:│]",
  "[border:╰][border:──────────────────────────────────────────────────────────────────────────────][border:╯]",
]
`;

exports[`list-picker — list row rendering > when rendered at different widths > produces consistent padding at narrow width 1`] = `
[
  "[borderAccent:╭][borderAccent:──────────────][border:┬][border:───────────────────────][border:╮]",
  "[borderAccent:│][borderAccent:[accent: Test Picker (]][border:│][border:[accent: Source Preview[0m        ]][border:│]",
  "[borderAccent:├][borderAccent:──────────────][border:┼][border:───────────────────────][border:┤]",
  "[borderAccent:│][BG:selectedBg[border:│][0m  line1[0m                [border:│]",
  "[borderAccent:│] [icon] a-very[border:│][0m  line2[0m                [border:│]",
  "[borderAccent:│][0m              [border:│][0m                       [border:│]",
  "[borderAccent:│][0m              [border:│][0m                       [border:│]",
  "[borderAccent:│][0m              [border:│][0m                       [border:│]",
  "[borderAccent:│][0m              [border:│][0m                       [border:│]",
  "[borderAccent:│][0m              [border:│][0m                       [border:│]",
  "[borderAccent:│][0m              [border:│][0m                       [border:│]",
  "[borderAccent:│][0m              [border:│][0m                       [border:│]",
  "[borderAccent:│][0m              [border:│][0m                       [border:│]",
  "[borderAccent:│][0m              [border:│][0m                       [border:│]",
  "[borderAccent:│][0m              [border:│][0m                       [border:│]",
  "[borderAccent:│][0m              [border:│][0m                       [border:│]",
  "[borderAccent:│][0m              [border:│][0m                       [border:│]",
  "[borderAccent:│][0m              [border:│][0m                       [border:│]",
  "[borderAccent:│][0m              [border:│][0m                       [border:│]",
  "[borderAccent:│][0m              [border:│][0m                       [border:│]",
  "[borderAccent:│][0m              [border:│][0m                       [border:│]",
  "[borderAccent:│][0m              [border:│][0m                       [border:│]",
  "[borderAccent:│][0m              [border:│][0m                       [border:│]",
  "[borderAccent:│][0m              [border:│][0m                       [border:│]",
  "[borderAccent:│][0m              [border:│][0m                       [border:│]",
  "[borderAccent:│][0m              [border:│][0m                       [border:│]",
  "[borderAccent:│][0m              [border:│][0m                       [border:│]",
  "[borderAccent:│][0m              [border:│][0m                       [border:│]",
  "[borderAccent:├][borderAccent:──────────────][border:┴][border:───────────────────────][border:┤]",
  "[border:│][dim: ↑ nav  pgup scroll[0m                   ][border:│]",
  "[border:╰][border:──────────────────────────────────────][border:╯]",
]
`;

exports[`list-picker — list row rendering > when rendered at different widths > produces consistent padding at wide width 1`] = `
[
  "[borderAccent:╭][borderAccent:──────────────────────────────────────────][border:┬][border:───────────────────────────────────────────────────────────────────────────][border:╮]",
  "[borderAccent:│][borderAccent:[accent: Test Picker (2/2)[0m                        ]][border:│][border:[accent: Source Preview[0m                                                            ]][border:│]",
  "[borderAccent:├][borderAccent:──────────────────────────────────────────][border:┼][border:───────────────────────────────────────────────────────────────────────────][border:┤]",
  "[borderAccent:│][BG:selectedBg:[accent:** [icon] short.ts*[border:│][0m  line1[0m                                                                    [border:│]",
  "[borderAccent:│] [icon] medium-file.ts[0m                    [border:│][0m  line2[0m                                                                    [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:│][0m                                          [border:│][0m                                                                           [border:│]",
  "[borderAccent:├][borderAccent:──────────────────────────────────────────][border:┴][border:───────────────────────────────────────────────────────────────────────────][border:┤]",
  "[border:│][dim: ↑ nav  pgup scroll[0m                                                                                                   ][border:│]",
  "[border:╰][border:──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────][border:╯]",
]
`;
